tests/NormalTests/paczka1/fuzzy1/27084669.err
Error in line 18: c7VGLd2 S115 16,5
Error in line 21: 8EfH A346 15,8
Error in line 22: 8EfH A365 42,3
Error in line 33: S115 S847 199,8
